objects/Std_Cost__c.object
<CustomObject>
    <fields>
        <fullName>A1Comp_Cost__c</fullName>
        <label>A1Comp Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alcohol_Percentage__c</fullName>
        <label>Alcohol Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BT_Per_Shipment__c</fullName>
        <label>BT Per Shipment</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <label>Brand Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Desc__c</fullName>
        <label>Brand Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bvg_Code__c</fullName>
        <label>Bvg Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bvg_Description__c</fullName>
        <label>Bvg Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPLT__c</fullName>
        <label>CS/PLT</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTRYORIG__c</fullName>
        <label>CTRYORIG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cntry_Desc__c</fullName>
        <label>Cntry Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F1_BAF__c</fullName>
        <label>F1 - BAF</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_BOL__c</fullName>
        <label>F1 - BOL</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_ISPS__c</fullName>
        <label>F1 - ISPS</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_Inland_Freight_Fuel__c</fullName>
        <label>F1 - Inland Freight Fuel Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_Inland_Freight__c</fullName>
        <label>F1 - Inland Freight</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_Insulation__c</fullName>
        <label>F1 - Insulation</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_Manifest__c</fullName>
        <label>F1 - Manifest</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_Ocean_Freight__c</fullName>
        <label>F1 - Ocean Freight</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_Refer__c</fullName>
        <label>F1 - Refer</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F1_Total__c</fullName>
        <label>F1 - Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H1_InOut__c</fullName>
        <label>H1 - In/Out</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H1_Plt__c</fullName>
        <label>H1 - Plt</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H1_Total__c</fullName>
        <label>H1 - Total</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>I1_Chassis__c</fullName>
        <label>I1 - Chassis</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>I1_Drayage__c</fullName>
        <label>I1 - Drayage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>I1_Total__c</fullName>
        <label>I1 - Total</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IBSTKT__c</fullName>
        <label>IBSTKT</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <label>Item Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K1_BioTerror__c</fullName>
        <label>K1 - BioTerror</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K1_Clearing__c</fullName>
        <label>K1 - Clearing</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K1_Duty__c</fullName>
        <label>K1 - Duty</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K1_Excise_Tax__c</fullName>
        <label>K1 - Excise Tax</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K1_ISF__c</fullName>
        <label>K1 - ISF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K1_Total__c</fullName>
        <label>K1 - Total</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Liter_Per_Bottle__c</fullName>
        <label>Liter Per Bottle</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Long_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Long Item Number</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O1_Harbor_Fees__c</fullName>
        <label>O1 - Harbor Fees</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O1_Marine_Insurance__c</fullName>
        <label>O1 - Marine Insurance</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O1_Total__c</fullName>
        <label>O1 - Total</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pack__c</fullName>
        <label>Pack</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Whs__c</fullName>
        <label>Prime Whs</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proof__c</fullName>
        <label>Proof</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selection__c</fullName>
        <label>Selection</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Item_Number__c</fullName>
        <externalId>true</externalId>
        <label>Short Item Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Freight__c</fullName>
        <label>X1 - Freight</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Standard Cost Reference</label>
    <nameField>
        <displayFormat>STR-{0}</displayFormat>
        <label>Standard Cost Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Cost References</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>